# pure_testing

./: .gitignore  .gitpod.yml
python/mage/: main.py
python/package_management/: pyproject.toml
python/package_management/src/package_management/: __init__.py
python/project_managemenat/: hello.py  pyproject.toml
